Stop map overflowing description box

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -833,6 +833,7 @@ input[type=checkbox].field-lock + label:before,
   padding: 18px;
   border-radius: 5px;
   margin: 8px 0;
+  overflow: auto;
 }
 
 .description, .markdown {
